[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/gameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 512
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 1 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0, 0, 0, 1 )

[node name="GameOverText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = 136.0
margin_right = 1824.0
margin_bottom = 636.0
rect_min_size = Vector2( 1400, 500 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 632.0
margin_top = 640.0
margin_right = 1232.0
margin_bottom = 910.0
rect_min_size = Vector2( 600, 0 )
custom_constants/separation = 50

[node name="MainMenu" type="Button" parent="Buttons"]
margin_right = 600.0
margin_bottom = 110.0
focus_neighbour_top = NodePath("../Replay")
focus_neighbour_bottom = NodePath("../Replay")
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="Replay" type="Button" parent="Buttons"]
margin_top = 160.0
margin_right = 600.0
margin_bottom = 270.0
focus_neighbour_top = NodePath("../MainMenu")
focus_neighbour_bottom = NodePath("../MainMenu")
custom_fonts/font = SubResource( 3 )
text = "Replay"

[connection signal="pressed" from="Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Buttons/Replay" to="." method="_on_Replay_pressed"]
